--- a/public/foundation6_lib/scss/_settings.scss
+++ b/public/foundation6_lib/scss/_settings.scss
@@ -237,7 +237,7 @@ $button-margin: 0 0 $global-margin 0;
 $button-fill: solid;
 $button-background: $primary-color;
 $button-background-hover: scale-color($button-background, $lightness: -15%);
-$button-color: #fff;
+$button-color: #999;
 $button-color-alt: #000;
 $button-radius: $global-radius;
 $button-sizes: (
