--- a/source_sass/_base.scss
+++ b/source_sass/_base.scss
@@ -3,14 +3,53 @@ body {
   background-color: $first-color;
   background-image: url("../media/LinkmyProf.jpg");
   background-repeat: no-repeat;
-  background-size: 100%;
   background-attachment: fixed;
+  background-size: cover;
+}
+
+.fullWidth {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: initial;
+}
+
+.gallery-image {
+  height: 210px;
+  max-height: 100%;
+  &:hover {
+    @include transition(0.4);
+    opacity: 0.8;
+  }
+}
+
+.university_panel {
+  padding-left: 100px;
+  background-color: white;
+  filter: grayscale(20%);
+  opacity: 0.95;
+  z-index: 100;
+}
+
+.university_panel:before {
+  @include blur(0.8);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background-position: center bottom;
+  background-attachment: fixed;
+  background-color: rgba(255, 255, 255, 0.2);
+  filter: blur(5px);
 }
 
 .top-bar {
   min-height: 15px;
   display: inline-block;
   background-color: $first-color;
+  z-index: 200;
 }
 
 #headmenu1 {
@@ -104,7 +143,6 @@ body {
   margin-top: 45%;
   padding-top: 5%;
   background-color: $first-color;
-  border-bottom: dashed;
   border-color: $third-color;
 }
 
@@ -122,7 +160,6 @@ body {
 
 #Team {
   padding-top: 5%;
-  border-top: dashed;
   border-color: $third-color;
   background-color: $first-color;
   padding-bottom: 5%;
@@ -131,7 +168,6 @@ body {
 #Intro {
   background-color: $first-color;
   border-color: $third-color;
-  border-top: dashed;
 }
 
 #Foot-container {
@@ -140,13 +176,10 @@ body {
 }
 
 .Foot {
-  background-color: $forth-color;
+  background-color: $third-color;
   min-height: 70px;
   padding-top: 3%;
   padding-bottom: 3%;
-  animation-name: backgroundColor;
-  animation-duration: 6s;
-  animation-iteration-count: 300;
   position: relative;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -159,17 +192,6 @@ h1 {
   color: $third-color;
 }
 
-@keyframes backgroundColor {
-  0% {
-    background-color: $first-color;
-  }
-  25% {
-    background-color: $forth-color;
-  }
-  50% {
-    background-color: $third-color;
-  }
-  100% {
-    background-color: $first-color;
-  }
+.views {
+  margin-top: 100px;
 }
